# rush-hour

./: .build.yml  .gitignore  .release-please-manifest.json  CHANGELOG.md  LICENSE  README.md  release-please-config.json
.github/workflows/: backend-image.yml  release-please.yml  release.yml
backend/: .air.toml  Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum  mumbai_trains.db  sqlc.yaml
backend/cmd/server/: main.go
backend/internal/config/: config.go
backend/internal/usecase/: departures.go  departures_test.go  position.go  report.go  status.go
backend/test/e2e/: departures_test.go  report_test.go  (+3 more)
deploy/: inventory.yml  playbook.yml
deploy/files/: rush-hour-backend.service
fastlane/: Appfile  Fastfile  report.xml
maestro/: screenshots.yaml
mobile/: .env.example  .gitignore  CHANGELOG.md  Makefile  app.json  components.json  global.css  metro.config.js  package-lock.json  package.json  tailwind.config.js
mobile/android/: .gitignore  build.gradle  gradle.properties  settings.gradle
mobile/app/: _layout.tsx
mobile/ios/: Podfile  Podfile.properties.json  license_plist.yml
mobile/plugins/: android-abi-splits.js  android-flavors.js  android-jvm-args.js  android-signing.js  ios-icon-fallback.js
parser/: Makefile  README.md  export.sh  pyproject.toml
parser/data/: all_stations_lat_lon.csv  station_codes.json  timetable.db
parser/src/rush_hour_parser/: __init__.py  __main__.py  apk_export.py  mindicator.py  models.py  parser.py  sqlite_export.py
parser/tests/: test_cli_exports.py  test_schema_indexes.py
scripts/: screenshots.sh
(+914 files in other folders)
