[project]
name = "rush-hour-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SphericalKat", email = "me@kat.bio" }
]
requires-python = ">=3.14"
dependencies = [
    "pdfplumber>=0.11.9",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
